added new functionality:seat locking system and did minor changes in Rest API endpoints